--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -50,17 +50,18 @@
             android:layout_marginBottom="@dimen/_12sdp" />
 
         <!-- Email Input -->
+
+        <!-- Password Input -->
         <EditText
             android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_48sdp"
-            android:hint="@string/email_hint"
-            android:padding="@dimen/_12sdp"
-            android:background="@drawable/edit_text_background"
             android:layout_marginBottom="@dimen/_12sdp"
-            android:inputType="textEmailAddress" />
+            android:background="@drawable/edit_text_background"
+            android:hint="@string/email_hint"
+            android:inputType="textEmailAddress"
+            android:padding="@dimen/_12sdp" />
 
-        <!-- Password Input -->
         <EditText
             android:id="@+id/et_password"
             android:layout_width="match_parent"
@@ -81,6 +82,34 @@
             android:background="@drawable/edit_text_background"
             android:layout_marginBottom="@dimen/_16sdp"
             android:inputType="textPassword" />
+
+        <Spinner
+            android:id="@+id/spinner_user_role"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_48sdp"
+            android:background="@drawable/spinner_background_with_arrow"
+            android:padding="@dimen/_12sdp"
+            android:layout_marginBottom="@dimen/_16sdp"
+            android:entries="@array/user_role_options" />
+
+        <Spinner
+            android:id="@+id/spinner_organization"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_48sdp"
+            android:background="@drawable/spinner_background_with_arrow"
+            android:padding="@dimen/_12sdp"
+            android:layout_marginBottom="@dimen/_16sdp"
+            android:visibility="gone"/>
+        <!-- Custom Organization Input (Initially Hidden) -->
+        <EditText
+            android:id="@+id/et_custom_organization"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_48sdp"
+            android:hint="Enter your organization"
+            android:padding="@dimen/_12sdp"
+            android:background="@drawable/edit_text_background"
+            android:layout_marginBottom="@dimen/_16sdp"
+            android:visibility="gone" />
 
         <!-- Sign Up Button -->
         <Button
@@ -115,7 +144,8 @@
             android:textSize="@dimen/_14ssp"
             android:fontFamily="sans-serif"
             android:textColor="@color/blue"
-            android:gravity="center" />
+            android:gravity="center"
+            android:layout_marginBottom="100dp"/>
 
 
     </LinearLayout>
