--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -10,7 +10,7 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <!-- User Info -->
+    <!-- Student Info -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
