--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -9,7 +9,7 @@
     android:elevation="2dp"
     android:orientation="vertical">
 
-    <!-- User Info -->
+    <!-- Student Info -->
 
     <LinearLayout
         android:layout_width="match_parent"
