--- a/app/src/main/res/layout/company_card.xml
+++ b/app/src/main/res/layout/company_card.xml
@@ -1,6 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/company_material_card_view"
+    android:layout_marginLeft="10dp"
+    android:layout_marginBottom="10dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:id="@+id/company_material_card_view_RLayout"
+        android:background="@drawable/lesson_card_background">
+
+        <ImageView
+            android:id="@+id/company_image"
+            android:layout_width="match_parent"
+            android:layout_height="122dp"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/lesson_image" />
+
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/lesson_level"-->
+<!--            android:text="Intermediate"-->
+<!--            android:fontFamily="@font/roboto"-->
+<!--            android:textStyle="bold"-->
+<!--            android:textSize="14dp"-->
+<!--            android:background="@drawable/lesson_level_background"-->
+<!--            android:layout_alignTop="@id/lesson_image" />-->
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/company_name"
+            android:text="Dell"
+            android:fontFamily="@font/roboto"
+            android:textSize="20dp"
+            android:layout_below="@id/company_image"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"/>
+
+<!--        <ProgressBar-->
+<!--            android:id="@+id/progress_bar"-->
+<!--            style="@style/Widget.AppCompat.ProgressBar.Horizontal"-->
+<!--            android:layout_width="125dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:max="100"-->
+<!--            android:progress="30"-->
+<!--            android:layout_marginLeft="8dp"-->
+<!--            android:progressBackgroundTint="@color/gray"-->
+<!--            android:progressTint="#4CAF50"-->
+<!--            android:layout_alignParentBottom="true"-->
+<!--            android:layout_marginBottom="10dp"-->
+<!--            android:visibility="visible"/>-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/progress"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="30%"-->
+<!--            android:fontFamily="@font/roboto"-->
+<!--            android:textSize="10dp"-->
+<!--            android:layout_toRightOf="@id/progress_bar"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:layout_marginLeft="15dp"-->
+<!--            android:layout_alignParentBottom="true"-->
+<!--            android:layout_marginBottom="12dp"-->
+<!--            android:visibility="visible"/>-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/star"-->
+<!--            android:layout_width="20dp"-->
+<!--            android:layout_height="20dp"-->
+<!--            android:src="@drawable/ic_star"-->
+<!--            android:layout_alignParentLeft="true"-->
+<!--            android:layout_alignParentBottom="true"-->
+<!--            android:layout_marginBottom="12dp"-->
+<!--            android:layout_marginLeft="120dp"-->
+<!--            android:visibility="gone"/>-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/ratings"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="4.9"-->
+<!--            android:fontFamily="@font/roboto"-->
+<!--            android:textColor="#9A9A9A"-->
+<!--            android:textSize="13dp"-->
+<!--            android:layout_toRightOf="@id/star"-->
+<!--            android:layout_alignParentBottom="true"-->
+<!--            android:layout_marginBottom="12dp"-->
+<!--            android:layout_marginLeft="2dp"-->
+<!--            android:visibility="gone"/>-->
+
+    </RelativeLayout>
+
+</com.google.android.material.card.MaterialCardView>
