--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -78,6 +78,35 @@
         android:textSize="16sp" />
 
     <!-- Post Actions -->
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:text="Tag:"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/lecturerSkillTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:text="Lecturer:" />
+
+    <TextView
+        android:id="@+id/studentSkillTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:text="Student:" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
