--- a/app/src/main/res/layout/fragment_search_company.xml
+++ b/app/src/main/res/layout/fragment_search_company.xml
@@ -1,14 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchCompany">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragments.SearchLesson"
+    android:background="@drawable/gradient_background"
+    android:id="@+id/searchLessonFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/search_company_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        app:cardCornerRadius="250dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_below="@id/arrow">
 
-</FrameLayout>
+        <SearchView
+            android:id="@+id/search_company_post"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:background="@color/white"
+            android:iconifiedByDefault="false"
+            android:layoutDirection="rtl"
+            android:padding="8dp"
+            android:queryBackground="@android:color/transparent"
+            android:queryHint="Search" />
+
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/company_result"
+        android:text="No Result Found"
+        android:textColor="@color/white"
+        android:fontFamily="@font/roboto"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_below="@id/search_company_container"
+        android:layout_marginLeft="20dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/company_result_rec_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/company_result"
+        android:layout_marginTop="10dp"
+        android:clipToPadding="false"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"/>
+
+    <ImageView
+        android:id="@+id/arrow"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/ic_back2"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"/>
+
+    <TextView
+        android:id="@+id/search_company_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Search Company"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="13dp"
+        android:textSize="28dp"
+        android:textColor="@color/white"/>
+
+
+</RelativeLayout>
