--- a/app/src/main/res/layout/popup_new_post.xml
+++ b/app/src/main/res/layout/popup_new_post.xml
@@ -26,18 +26,19 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <!-- Title Input -->
+
+        <!-- Content Input -->
         <TextView
             android:id="@+id/popup_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:fontFamily="sans-serif-black"
             android:text="Create a project!"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/popup_exit" />
 
-        <!-- Content Input -->
         <EditText
             android:id="@+id/project_title"
             android:layout_width="0dp"
@@ -77,7 +78,7 @@
             android:id="@+id/submit_review_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="96dp"
             android:background="@drawable/button_gradient"
             android:text="Post"
             android:textColor="@color/white"
@@ -103,7 +104,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:text="Skills for Lecturer:"
+            android:text="Lecturer's Skill"
             android:textSize="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -116,8 +117,7 @@
             android:background="@drawable/edittext_border"
             android:padding="12dp"
             android:textSize="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintEnd_toStartOf="@+id/suggestedLecturerSkill"
             app:layout_constraintStart_toEndOf="@+id/textView3"
             app:layout_constraintTop_toTopOf="@+id/textView3" />
 
@@ -126,7 +126,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:text="Skills for Students:"
+            android:text="Student's Skill"
             android:textSize="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -139,8 +139,7 @@
             android:background="@drawable/edittext_border"
             android:padding="12dp"
             android:textSize="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintEnd_toStartOf="@+id/suggestedStudentSkill"
             app:layout_constraintStart_toEndOf="@+id/textView4"
             app:layout_constraintTop_toTopOf="@+id/textView4" />
 
@@ -207,6 +206,58 @@
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/textView6"
             app:layout_constraintTop_toBottomOf="@+id/start_date" />
+
+        <EditText
+            android:id="@+id/suggestedLecturerSkill"
+            android:layout_width="75dp"
+            android:layout_height="39dp"
+            android:layout_marginTop="24dp"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/project_title" />
+
+        <EditText
+            android:id="@+id/suggestedStudentSkill"
+            android:layout_width="79dp"
+            android:layout_height="41dp"
+            android:layout_marginTop="18dp"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/lecturer_skill" />
+
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="Number of student / educator required:"
+            android:textSize="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/end_date" />
+
+        <EditText
+            android:id="@+id/numStudentRequired"
+            android:layout_width="76dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="200dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+        <EditText
+            android:id="@+id/numEducatorRequired"
+            android:layout_width="80dp"
+            android:layout_height="37dp"
+            android:layout_marginStart="17dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintStart_toEndOf="@+id/numStudentRequired"
+            app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
