--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -18,9 +18,8 @@
             app:layout_constraintTop_toTopOf="parent"
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar"
-            app:navigationIcon="@drawable/ic_arrow_back"
             app:navigationIconTint="@color/white"
-            app:title="Feedback"
+            app:title="Course Review"
             app:titleCentered="true" />
 
         <!-- Feedback Form -->
@@ -72,40 +71,7 @@
                 </FrameLayout>
             </LinearLayout>
 
-            <!-- Feedback Type Label and Spinner -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:layout_marginTop="20dp">
 
-                <!-- Types Label -->
-                <TextView
-                    android:id="@+id/tvFeedbackTypeLabel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Types"
-                    android:textColor="#000000"
-                    android:textSize="16sp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="10dp" />
-
-                <!-- Feedback Type Spinner -->
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginStart="@dimen/_20sdp"
-                    android:hint="Type of Feedback">
-
-                    <android.widget.Spinner
-                        android:id="@+id/spinnerFeedbackType"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-                </com.google.android.material.textfield.TextInputLayout>
-
-            </LinearLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/feedbackInputLayout"
