--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,6 +13,10 @@
         android:icon="@drawable/ic_leaderboard"
         android:title="Leaderboard" />
     <item
+        android:id="@+id/nav_review"
+        android:icon="@drawable/ic_feedback"
+        android:title="Review" />
+    <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/ic_profile"
         android:title="Profile" />
