--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,10 +8,7 @@
         android:id="@+id/nav_community"
         android:icon="@drawable/ic_community"
         android:title="Community" />
-    <item
-        android:id="@+id/nav_leaderboard"
-        android:icon="@drawable/ic_leaderboard"
-        android:title="Leaderboard" />
+
     <item
         android:id="@+id/nav_review"
         android:icon="@drawable/ic_feedback"
@@ -21,3 +18,8 @@
         android:icon="@drawable/ic_profile"
         android:title="Profile" />
 </menu>
+
+    <!--    <item-->
+    <!--        android:id="@+id/nav_leaderboard"-->
+    <!--        android:icon="@drawable/ic_leaderboard"-->
+    <!--        android:title="Leaderboard" />-->
