--- a/app/src/main/res/layout/popup_new_post.xml
+++ b/app/src/main/res/layout/popup_new_post.xml
@@ -78,14 +78,14 @@
             android:id="@+id/submit_review_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="96dp"
+            android:layout_marginTop="84dp"
             android:background="@drawable/button_gradient"
             android:text="Post"
             android:textColor="@color/white"
             android:textStyle="bold"
             app:backgroundTint="@null"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintHorizontal_bias="0.079"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/end_date" />
 
@@ -165,8 +165,8 @@
 
         <EditText
             android:id="@+id/start_date"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="211dp"
+            android:layout_height="48dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/edittext_border"
@@ -192,8 +192,8 @@
 
         <EditText
             android:id="@+id/end_date"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="211dp"
+            android:layout_height="49dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/edittext_border"
@@ -241,8 +241,8 @@
             android:id="@+id/numStudentRequired"
             android:layout_width="76dp"
             android:layout_height="36dp"
-            android:layout_marginStart="200dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="188dp"
+            android:layout_marginTop="24dp"
             android:ems="10"
             android:inputType="number"
             app:layout_constraintStart_toStartOf="parent"
@@ -252,8 +252,8 @@
             android:id="@+id/numEducatorRequired"
             android:layout_width="80dp"
             android:layout_height="37dp"
-            android:layout_marginStart="17dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="24dp"
             android:ems="10"
             android:inputType="number"
             app:layout_constraintStart_toEndOf="@+id/numStudentRequired"
