--- a/app/src/main/res/layout/fragment_course_outline.xml
+++ b/app/src/main/res/layout/fragment_course_outline.xml
@@ -70,6 +70,13 @@
                 android:stretchColumns="1"
                 android:paddingTop="20dp" />
 
+            <TextView
+                android:id="@+id/description_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:paddingTop="20dp" />
+
         </LinearLayout>
     </ScrollView>
 
